k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api
  labels:
    app.kubernetes.io/name: task-api
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: task-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
      nodePort: 30081
